# geospatial-vit-drone

./: .gitignore  LICENSE  commit_message.txt  debug_data.py  final_comprehensive_test.py  final_test.py  final_test.sh  pyproject.toml  requirements-m1.txt  requirements.txt  setup.py  setup_project.sh  test_from_github.sh  test_full.py  test_github_installation.sh  test_inference.py  test_install.py  test_installation.py  update_readme_badges.py  verify_github_final.sh  verify_github_upload.py  verify_github_upload.sh
configs/: default.yaml  drone_training.yaml  improved_test.yaml  m1_test.yaml  simple_test.yaml  test_minimal.yaml
data/raw/sample_images/: annotations.csv
experiments/improved_test/improved_vit/: config.yaml
experiments/simple_test/geospatial_vit/: config.yaml
experiments/test/: model.pth
scripts/: create_drone_sample_data.py  generate_test_data.py  verify_setup.py
src/geospatial_vit/: __init__.py  __main__.py  inference_real.py  train.py  train_real.py
src/geospatial_vit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/geospatial_vit/dataloaders/: drone_loader.py
src/geospatial_vit/models/: geospatial_vit.py
